fix: 添加 httpx[socks] 依赖解决 SOCKS 代理问题

--- a/envs/requirements.txt
+++ b/envs/requirements.txt
@@ -15,7 +15,7 @@ celery>=5.3.0
 redis>=5.0.0
 
 # ===== HTTP 客户端 =====
-httpx>=0.25.0
+httpx[socks]>=0.25.0
 python-multipart>=0.0.6
 python-jose[cryptography]>=3.3.0
 sse-starlette
