--- a/envs/requirements.txt
+++ b/envs/requirements.txt
@@ -31,6 +31,7 @@ tsdownsample>=0.1.0
 statsmodels>=0.14.0
 adtk>=0.6.2
 kneed>=0.8.0
+PyWavelets>=1.4.0
 
 # ===== 深度学习核心 (PyTorch 需单独安装) =====
 # pip install torch>=2.5.0 --index-url https://download.pytorch.org/whl/cu124
