--- a/envs/environment.yml
+++ b/envs/environment.yml
@@ -20,7 +20,7 @@ dependencies:
       - uvicorn>=0.24.0
       - pydantic>=2.5.0,<=2.10.6
       - pydantic-settings>=2.1.0
-      - gradio>=4.38.0
+      - gradio>=4.38.0,<=5.31.0
       
       # ===== 数据库与任务队列 =====
       - sqlalchemy>=2.0.0
@@ -49,18 +49,18 @@ dependencies:
       
       # ===== 深度学习核心 =====
       # PyTorch 需单独安装：pip install torch --index-url https://download.pytorch.org/whl/cu124
-      - transformers>=4.49.0
+      - transformers>=4.49.0,<=4.52.4
       - tokenizers>=0.19.0
-      - peft>=0.14.0
+      - peft>=0.14.0,<=0.15.2
       - bitsandbytes>=0.41.0
-      - accelerate>=1.3.0
+      - accelerate>=1.3.0,<=1.7.0
       - sentencepiece>=0.1.99
       - safetensors>=0.4.0
       - huggingface-hub>=0.20.0
-      - datasets>=2.16.0
+      - datasets>=2.16.0,<=3.6.0
       
       # ===== LlamaFactory 训练 =====
-      - trl>=0.8.6
+      - trl>=0.8.6,<=0.9.6
       - einops
       - fire
       - omegaconf
@@ -79,7 +79,18 @@ dependencies:
       - joblib>=1.3.0
       - Pillow>=10.0.0
       - requests>=2.31.0
+      - python-dateutil>=2.8.0
       
       # ===== 标注工具 =====
       - flask>=3.0.0
       - flask-cors>=4.0.0
+      - openpyxl>=3.0.0
+      - werkzeug>=3.0.0
+      - PyJWT>=2.8.0
+      
+      # ===== LlamaFactory 额外依赖 =====
+      - tiktoken
+      - tyro<0.9.0
+      
+      # ===== 时序变点检测 =====
+      - ruptures>=1.1.0
