--- a/envs/requirements.txt
+++ b/envs/requirements.txt
@@ -6,7 +6,7 @@ fastapi>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.5.0,<=2.10.6
 pydantic-settings>=2.1.0
-gradio>=4.38.0
+gradio>=4.38.0,<=5.31.0
 
 # ===== 数据库与任务队列 =====
 sqlalchemy>=2.0.0
@@ -35,18 +35,18 @@ PyWavelets>=1.4.0
 
 # ===== 深度学习核心 (PyTorch 需单独安装) =====
 # pip install torch>=2.5.0 --index-url https://download.pytorch.org/whl/cu124
-transformers>=4.49.0
+transformers>=4.49.0,<=4.52.4
 tokenizers>=0.19.0
-peft>=0.14.0
+peft>=0.14.0,<=0.15.2
 bitsandbytes>=0.41.0
-accelerate>=1.3.0
+accelerate>=1.3.0,<=1.7.0
 sentencepiece>=0.1.99
 safetensors>=0.4.0
 huggingface-hub>=0.20.0
-datasets>=2.16.0
+datasets>=2.16.0,<=3.6.0
 
 # ===== LlamaFactory 训练额外依赖 =====
-trl>=0.8.6
+trl>=0.8.6,<=0.9.6
 einops
 modelscope>=1.14.0
 hf-transfer
@@ -67,11 +67,22 @@ tqdm>=4.66.0
 joblib>=1.3.0
 Pillow>=10.0.0
 requests>=2.31.0
+python-dateutil>=2.8.0
 
 # ===== 标注工具 (Flask) =====
 flask>=3.0.0
 flask-cors>=4.0.0
+openpyxl>=3.0.0
+werkzeug>=3.0.0
+PyJWT>=2.8.0
 
 # ===== 媒体处理 (可选) =====
 av
 librosa
+
+# ===== LlamaFactory 额外依赖 =====
+tiktoken
+tyro<0.9.0
+
+# ===== 时序变点检测 =====
+ruptures>=1.1.0
